<?xml version="1.0"?>
<package format="3">
  <name>rebotarm_moveit_config</name>
  <version>0.1.0</version>
  <description>Arm-only MoveIt 2 configuration for the portable DM reBotArm driver.</description>
  <maintainer email="support@example.com">reBotArm Maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rebotarm_bringup</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-yaml</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
